--- a/maket.css
+++ b/maket.css
@@ -7,6 +7,15 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'TTLakes';
+    src: url('font/TTLakes-Bold.woff') format('woff'),
+    url('font/TTLakes-Bold.ttf') format('truetype'),
+    url('font/TTLakes-Bold.eot') format('embeddedopentype');
+    font-weight: 700;
+    font-style: normal;
+}
+
 body {
     width: 320px;
     height: 509px;
@@ -16,28 +25,33 @@ body {
     font-style: normal;
 }
 
-.menu {
+.menu-block {
     width: 100%;
     height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 16.73px;
+    gap: 17px;
     margin: 0;
     padding: 0;
 }
 
-.menu-divider {
+.menu-item--divider {
     width: 2px;
     height: 32px;
-    background-color: black;
+    background-color: #EAEAEA;
     border: 1px solid #EAEAEA;
+}
+
+.menu-item {
+    display: block;
 }
 
 .title {
     width: 302px;
     height: 40px;
     display: flex;
+    flex-wrap: nowrap;
     margin-left: 0;
     margin-top: 24px;
 }
@@ -46,17 +60,17 @@ body {
     width: 4px;
     height: 40px;
     background-color: #41F6D7;
-
 }
 
 .title__text {
     width: 268px;
     height: 40px;
+    display: block;
     font-size: 28px;
     font-weight: 700;
     color: #1B1C21;
     line-height: 40px;
-    letter-spacing: -0.6px;
+    margin: 0;
     margin-left: 12px;
 }
 
@@ -83,7 +97,6 @@ body {
     padding-bottom: 8px;
     padding-left: 17px;
     padding-right: 9px;
-    letter-spacing: -0.2px;
     line-height: 24px;
 }
 
@@ -106,6 +119,7 @@ body {
 .button {
     display: flex;
     margin-left: 16px;
+    border: none;
 }
 
 .button__image {
@@ -121,7 +135,6 @@ body {
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
-    letter-spacing: -0.2px;
 }
 
 .image {
