--- a/maket.css
+++ b/maket.css
@@ -47,13 +47,21 @@ body {
     display: block;
 }
 
+.menu-item--hidden {
+    display: none;
+}
+
+.main-info {
+    background-color: #F8F8F8;
+}
+
 .title {
     width: 302px;
     height: 40px;
     display: flex;
     flex-wrap: nowrap;
     margin-left: 0;
-    margin-top: 24px;
+    padding-top: 24px;
 }
 
 .title__highlight {
@@ -75,52 +83,55 @@ body {
 }
 
 .nav {
+    width: 320px;
+    padding: 0;
     display: flex;
-    margin-top: 24px;
-    margin-left: 16px;
     overflow: hidden;
 }
 
 .nav-item {
-   width: 246px;
-   height: 40px; 
+    display: block;
+    height: 40px;
+    margin-left: 18px;
 }
 
 .nav-item__text {
-    width: 220px;
-    height: 24px;
     display: block;
-    font-size: 16px;
     text-decoration: none;
+    font-size: 16px;
     color: #7E7E82;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 17px;
-    padding-right: 9px;
-    line-height: 24px;
+    padding: 6px;
+    text-wrap: nowrap;
 }
 
-.nav-item--selected {
-    border: 2px solid #B8FFEC;
+.nav-item--hover:hover {
+    border: 2px solid #88FFEC;
     border-radius: 6px;
+}
+
+.description-block {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
 
 .text {
     width: 288px;
-    height: 90px;
-    margin-top: 24px;
+    height: 110px;
     margin-bottom: 16px;
     margin-left: 16px;
     font-size: 14px;
     font-weight: 400;
     color: #1B1C21; 
+    overflow: hidden;
 }
 
 .button {
     display: flex;
     margin-left: 16px;
     border: none;
-    background-color: white;
+    background-color: #F8F8F8;
 }
 
 .button__image {
@@ -142,4 +153,60 @@ body {
     width: 320px;
     height: 230px;
     margin-top: 13px;
+}
+
+@media (min-width: 768px) {
+    body {
+        min-width: 768px;
+        height: 509px;
+    }
+
+    .menu-block {
+        width: 100%;
+        height: 88px;
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .menu-item--hidden {
+        display: block;
+    }
+
+    .menu-item:nth-child(1) {
+        margin-left: 24px;
+    }
+
+    .menu-item:nth-child(4) {
+        margin-left: 250px;
+    }
+
+    .main-info {
+        width: 768px;
+        height: 416px;
+    }
+
+    .nav {
+        width: 768px;
+        justify-content: flex-start;
+        gap: 25px;
+    }
+
+    .nav-item {
+        margin: 0;
+        padding: 0;
+        display: flex;
+    }
+
+    .nav-item:nth-child(1) {
+        margin-left: 16px;
+    }
+
+    .nav-item:nth-child(4) {
+        display: none;
+    }
+
+    .description-block {
+        display: flex;
+        flex-direction: row;
+    }
 }
