--- a/maket.css
+++ b/maket.css
@@ -17,12 +17,16 @@
 }
 
 body {
-    width: 320px;
     height: 509px;
     margin: 0;
     padding: 0;
     font-family: "TTLakes", "Arial", serif;
     font-style: normal;
+}
+
+.page-container {
+    width: 320px;
+    margin: 0 auto;
 }
 
 .menu-block {
@@ -84,6 +88,10 @@ body {
     line-height: 40px;
     margin: 0;
     margin-left: 12px;
+}
+
+.title--hidden {
+    display: none;
 }
 
 .nav {
@@ -161,8 +169,12 @@ body {
 
 @media (min-width: 768px) {
     body {
-        min-width: 768px;
         height: 509px;
+    }
+
+    .page-container {
+        width: 768px;
+        margin: 0 auto;
     }
 
     .menu-block {
@@ -182,6 +194,10 @@ body {
 
     .menu-item:nth-child(4) {
         margin-left: 250px;
+    }
+
+    .title--hidden {
+        display: none;
     }
 
     .main-info {
@@ -248,9 +264,120 @@ body {
 
 @media (min-width: 1120px) {
     body {
-        width: 1120px;
         height: 535px;
+        background-color: #F8F8F8;
     }
 
+    .page-container {
+        width: 1120px;
+        margin: 0 auto;
+    }
 
+    .title {
+        display: none;
+    }
+
+    .menu {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        vertical-align: middle;
+    }
+
+    .title--hidden {
+        width: 302px;
+        height: 40px;
+        display: flex;
+        flex-wrap: nowrap;
+        margin-left: 0;
+        padding-top: 24px;
+    }
+
+    .menu-item--hidden-for-width1120 {
+        display: none;
+    }
+
+    .menu-item--visible-for-width1120 {
+        display: flex;
+        width: 190px;
+        height: 40px;
+        margin-right: 15px;
+    }
+
+    .menu-item__image {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: #1B1C21;
+    }
+    .menu-item:nth-child(8) {
+        margin-left: 400px;
+    }
+
+    .menu-item__text--hidden {
+        display: inline-block;
+        text-decoration: none;
+        margin-right: 8px;
+    }
+
+    .menu-item__image--hidden {
+        display: flex;
+    }
+
+    .nav {
+        width: 1120px;
+        margin-top: 0;
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 15px;
+        column-gap: 25px;
+        row-gap: 0;
+        margin-bottom: 10px;
+    }
+
+    .nav-item {
+        display: flex;
+    }
+
+    .nav-item:nth-child(4), 
+    .nav-item:nth-child(6), 
+    .nav-item:nth-child(7) {
+        display: flex;
+    }
+
+    .nav-item:nth-child(6) {
+        order: -1;
+    }
+
+    .nav-item:nth-child(2) {
+        display: none;
+    }
+
+    .nav-item:nth-child(1) {
+        margin-left: 0; 
+    }
+
+    .description-block {
+        width: 1120px;
+        height: 323px;
+        margin-top: 0px;
+    }
+
+    .text {
+        width: 490px;
+        height: 170px;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 400;
+        margin: 0;
+    }
+
+    .image {
+        margin-left: 36px;
+    }
+
+    .image img {
+        width: 531px;
+        border-radius: 6px;
+    }
 }
