--- a/maket.css
+++ b/maket.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    height: 509px;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     font-family: "TTLakes", "Arial", serif;
@@ -168,9 +168,6 @@ body {
 }
 
 @media (min-width: 768px) {
-    body {
-        height: 509px;
-    }
 
     .page-container {
         width: 768px;
