--- a/side-bar.css
+++ b/side-bar.css
@@ -20,10 +20,113 @@ body {
     font-family: "TTLakes", "Arial", serif;
     font-style: normal;
     color: #1B1C21;
+    margin: 0;
 }
 
 .side-bar-container {
     position: fixed;
     width: 320px;
     height: 1024px;
+    box-shadow: 16px 0 52px 0 rgb(223, 219, 219);
+}
+
+.navigation-links {
+    width: 100%;
+    height: 65px;
+    display: flex;
+    padding-left: 25px;
+    padding-top: 25px;
+    padding-right: 25px;
+    justify-content: left;
+    gap: 15px;
+}
+
+.navigation-links__third-link {
+    margin-left: 60px;
+}
+
+.navigation-list {
+    width: 100%;
+    height: 620px;
+}
+
+.services-list {
+    display: inline-block;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.services-list__item {
+    display: block;
+    padding-left: 25px;
+    padding-top: 30px;
+}
+
+.services-list__link {
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    color: #1B1C21;
+}
+
+.services-list__link--active{
+    color: #7E7E82;
+}
+
+.services-list__item--active::before {
+   display: inline-block;
+   content: "";
+   width: 4px;
+   height: 30px;
+   margin: 0;
+   padding: 0;
+   background-color: #41F6D7;
+   position: relative;
+   top: 10px;
+   left: -25px;
+}
+
+.contact-links {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    padding-left: 25px;
+    padding-right: 25px;
+    justify-content: left;
+    gap: 15px; 
+}
+
+.contact-info {
+    display: block;
+    margin-left: 25px;
+}
+
+.contact-info__mail {
+    font-weight: 500;
+}
+
+.contact-info__phone {
+    font-size: 24px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.lang-navigation {
+    display: inline-block;
+    margin-left: 25px;
+    margin-top: 40px;
+}
+
+.lang-navigation__lang-link {
+    display: inline-block;
+    text-decoration: none;
+    color: #1B1C21;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin-right: 6px;
+}
+
+.lang-navigation__lang-link--active {
+    color: #7E7E82;
 }
