--- a/side-bar.css
+++ b/side-bar.css
@@ -41,6 +41,12 @@ body {
     gap: 15px;
 }
 
+.navigation-links a:hover {
+    transform: scale(1.1); 
+    transition-duration: 1s;
+    transition-timing-function: ease-in;
+}
+
 .navigation-links__third-link {
     margin-left: 60px;
 }
@@ -70,6 +76,11 @@ body {
     color: #1B1C21;
 }
 
+.services-list__link:hover {
+    color:rgb(212, 47, 124);
+    transition: 0.5s;
+}
+
 .services-list__link--active{
     color: #7E7E82;
 }
@@ -96,6 +107,12 @@ body {
     justify-content: left;
     gap: 15px; 
 }
+
+.contact-links a:hover {
+    transform: scale(1.1) rotate(360deg); 
+    transition-duration: 1.5s;
+    transition-timing-function: ease-in;
+ }
 
 .contact-info {
     display: block;
@@ -129,4 +146,9 @@ body {
 
 .lang-navigation__lang-link--active {
     color: #7E7E82;
+}
+
+.lang-navigation__lang-link:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
 }
