--- a/slider.css
+++ b/slider.css
@@ -16,9 +16,12 @@
     font-style: normal;
 }
 
-body {
+.page-container {
     width: 320px;
-    height: 196px;
+    margin: 0 auto;
+}
+
+body {
     margin: 0;
     padding: o;
     padding-bottom: 38px;
@@ -31,7 +34,7 @@ body {
     width: 320px;
     height: 80px;
     margin: 0;
-    background: linear-gradient(270deg, #F8F8F8 0%, #FFF 98.61%);
+    background: linear-gradient(-270deg, #F8F8F8 0%, #FFF 98.61%);
 }
 
 .title__content {
@@ -56,30 +59,146 @@ body {
     box-sizing: border-box;
 }
 
+.brand-list--hidden {
+    width: 320px;
+    height: 154px;
+    display: flex;
+    background-color: #F8F8F8;
+    margin: 0;
+    padding: 16px;
+    padding-right: 0;
+    gap: 16px;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
 .brand-item {
     list-style: none;
 }
 
 .brand-item__link {
     text-decoration: none;
-    display: block;
+    display: flex;
+    justify-content: space-between;
     width: 200px;
     height: 48px;
     border: 1px solid #EAEAEA;
     border-radius: 6px;
     background-color: #FFF;
     padding: 16px;
+    
 }
 
 .brand-item__image {
-   display: inline-block; 
-   background-image: contain;
+    display: block;
+    align-self: center;
 }
 
-.brand-item__brand-img {
-    margin-right: 40px;
-}
-
-.button {
+.button-container {
     display: none;
+}
+
+@media (min-width: 768px) {
+    .page-container {
+        width: 768px;
+        margin: 0 auto;
+    }
+
+    .slider-container {
+        width: 768px;
+        height: 322px;
+    }
+
+    .title {
+        width: 768px;
+        height: 56px;
+    }
+
+    .brand-list {
+        width: 768px;
+        height: 210px;
+        display: flex;
+        overflow: hidden;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+    }
+
+    .brand-list--hidden {
+        width: 768px;
+        height: 210px;
+        display: flex;
+        overflow: hidden;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+    }
+
+    .button-container {
+        display: block;
+        height: 56px;
+        width: 768px;
+        background-color: #F8F8F8;
+        padding-top: 24px;
+    }
+
+    .button {
+        border: none;
+        display: flex;
+        vertical-align: middle;
+        background-color: #F8F8F8;
+        align-items: center;
+        gap: 10px;
+        margin-left: 16px;
+    }
+
+    .button-img {
+        display: block;
+    }
+
+    .button-text {
+        display: block;
+    }
+
+    .brand-list--unhidden {
+        height: 390px;
+        width: 768px;
+        display: flex;
+        overflow: hidden;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+        background-color: #F8F8F8;
+        margin: 0;
+        padding: 16px;
+        padding-right: 0;
+        gap: 16px;
+    }
+}
+
+@media (min-width: 1120px) {
+    .page-container {
+        width: 1120px;
+        margin: 0 auto;
+    }
+    
+    .slider-container {
+        width: 1120px;
+    }
+
+    .title {
+        width: 1120px;
+    }
+    .brand-list {
+        width: 1120px;
+    }
+
+    .brand-list--hidden {
+        width: 1120px;
+    }
+
+    .button-container {
+        width: 1120px;
+    }
+
+    .brand-list--unhidden {
+        width: 1120px;
+    }
 }
