--- a/slider.css
+++ b/slider.css
@@ -18,7 +18,6 @@
 
 .page-container {
     width: 320px;
-    height: 240px;
     margin: 0 auto;
     background-color: #F8F8F8;
     position: relative;
@@ -36,7 +35,6 @@ body {
 
 .title {
     width: 320px;
-    height: 80px;
     margin: 0;
     background: linear-gradient(-270deg, #F8F8F8 0%, #FFF 98.61%);
 }
@@ -52,7 +50,6 @@ body {
 
 .brand-list {
     width: 320px;
-    height: 170px;
     display: flex;
     margin: 0;
     padding: 16px;
@@ -60,7 +57,6 @@ body {
 
 .brand-list--hidden {
     width: 320px;
-    height: 154px;
     display: flex;
     margin: 0;
     padding: 16px;
@@ -70,6 +66,8 @@ body {
 
 .brand-item {
     list-style: none;
+    height: auto;
+    width: auto;
 }
 
 .brand-item__link {
@@ -94,12 +92,8 @@ body {
     display: none;
 }
 
-/* .brand-item:last-child {
-    gap: 30px;
-} */
-
-.swiper-pagination {
-    --swiper-pagination-top: 200px;
+.pagination {
+    position: relative;
 }
 
 @media (min-width: 768px) {
@@ -110,35 +104,32 @@ body {
 
     .slider-container {
         width: 768px;
-        height: 322px;
     }
 
     .title {
         width: 768px;
-        height: 56px;
     }
 
     .brand-list {
         width: 768px;
-        height: 210px;
         display: flex;
         overflow: hidden;
         flex-wrap: wrap;
-        box-sizing: border-box;
+        box-sizing: content-box;
+        gap: 16px;
     }
 
     .brand-list--hidden {
         width: 768px;
-        height: 210px;
+        height: 180px;
         display: flex;
         overflow: hidden;
         flex-wrap: wrap;
-        box-sizing: border-box;
+        box-sizing: content-box;
     }
 
     .button-container {
         display: block;
-        height: 56px;
         width: 768px;
         background-color: #F8F8F8;
         padding-top: 24px;
@@ -163,7 +154,6 @@ body {
     }
 
     .brand-list--unhidden {
-        height: 390px;
         width: 768px;
         display: flex;
         overflow: hidden;
