--- a/repairSlider.css
+++ b/repairSlider.css
@@ -74,7 +74,7 @@ body {
     text-decoration: none;
     display: flex;
     justify-content: space-between;
-    width: 224px;
+    width: 204px;
     height: 120px;
     border: 1px solid #EAEAEA;
     border-radius: 6px;
@@ -82,6 +82,7 @@ body {
     padding: 16px;
     min-width: 0;
     color: #1B1C21;
+    font-weight: 500;
 }
 
 .repair-item__image {
